SONARIAC-1458 Narrow the scope of YAML files considered by the spring-config sensor